[project]
name = "transport-docker-image"
version = "0.2.0"
readme = "README.md"
description = "transport docker image with best effort to reduce transmission size"
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.5.1",
]

[project.scripts]
transport-docker-image = "transport_docker_image:cli"

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
